# transformers-collection

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: semver.yml
configs/: sentiment-clf.yml
transformers_collection/: __init__.py  __main__.py  config_loader.py
transformers_collection/models/: base.py  models.py
